--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "espress": "0.0.0"
+    "espress": "0.0.0",
+    "expresss": "0.0.0"
   }
 }
